# animedia_event

./: .gitignore  README.md  pyproject.toml
animedia_event/: handlers.py  sqliteWork.py  test.py  workTelegram.py
